# TSBee

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  implement_better_min_1_tree.md  plan.md  pyproject.toml
.benchmarks/: mst_benchmark.rs
.github/workflows/: CI.yml  docs.yml
alpha_nearness/: Cargo.toml  README.md
alpha_nearness/src/: lib.rs
benchmarks/: Cargo.toml  README.md  run_benchmarks.py  run_ci_benchmarks.py  test_parser.py  tsplib_parser.py
benchmarks/data/: best_values.yaml  hk_bounds.yaml
benchmarks/data/atsp/: ftv170.atsp  ftv170.tour  rbg323.atsp  rbg323.tour  rbg358.atsp  rbg358.tour  rbg403.atsp  rbg403.tour  rbg443.atsp  rbg443.tour
benchmarks/data/problems/: bayg29.tsp  fri26.tsp  gr431.tsp  pa561.tsp  pla33810.tsp  pla7397.tsp  pla85900.tsp  swiss42.tsp
benchmarks/data/solutions/: att48.opt.tour  kroA100.opt.tour  kroD100.opt.tour  lin105.opt.tour  st70.opt.tour
benchmarks/data/tsp/: fnl4461.tsp  pcb3038.tsp  pr2392.tour  pr2392.tsp  rl5934.tsp  si1032.tsp  u2319.tsp
benchmarks/src/: lib.rs  read_best_values_file.rs  read_problem_file.rs  read_tour_file.rs
benchmarks/src/read_problem_file/: parse_tsp_file.rs
benchmarks/tests/: validate_instances.rs
candidates/: Cargo.toml
candidates/data/: benchmark_results.csv
candidates/examples/: benchmark_candidates.rs
candidates/src/: lib.rs
docs/: 3opt_algorithm.md  Makefile  README.md
docs/source/: api.rst  benchmarks.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst
examples/: README.md  ab_test_heap_mst.rs  basic_usage.py  benchmark_comparison.py  random_cities.py  real_world_example.py
graph/: Cargo.toml
graph/src/: delaunay.rs  lib.rs
held_karp/: Cargo.toml  README.md
held_karp/src/: lib.rs  utils.rs
min1tree/: Cargo.toml
min1tree/src/: lib.rs  utils.rs
mst/: Cargo.toml
mst/src/: lib.rs
python/: ab_test_algorithm_performance.py  playground.py  playground_find_bug.py
src/: candidates.rs  input.rs  lib.rs  local_move.rs  main.rs  penalties.rs  postprocess.rs  preprocess.rs  solution.rs  solver.rs
src/candidates/: candidate_set.rs
src/domain/: city.rs  route.rs
src/local_moves/: two_opt.rs
src/penalties/: candidates.rs  distance.rs
src/penalties/candidates/: alpha_nearness.rs  candidate_set.rs  heap_mst.rs  held_karp.rs  min_one_tree.rs  min_spanning_tree.rs  utils.rs
src/penalties/distance/: distance_matrix.rs  utils.rs
src/solver/: cache.rs  parameters.rs  solution_manager.rs  solution_report.rs  stats.rs
tests/: test_alpha_nearness.rs  test_asymmetry.rs  test_heap_mst_performance.rs  test_held_karp.rs  test_python_api.py
tests/data/ATT532/: att532_alpha_neighbor_ranks.txt  att532_alpha_neighbor_ranks_improved.txt
tsp/src/: city.rs  edge.rs  instance.rs  lib.rs  problem.rs  solution.rs
tsp/src/problem/: distance_matrix.rs  euclidean.rs  points_and_function.rs
tsp/src/problem/points_and_function/: att.rs  ceil_2d.rs  euc_2d.rs  geo.rs  man_2d.rs  max_2d.rs
tsp/src/solution/: list.rs
