[package]
name = "tsp_solve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tsp_solve"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.40"
rand = "0.9.0"
csv = "1.2"

[dependencies.pyo3]
version = "0.23.3"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[profile.release]
debug = true