[package]
name = "tsbee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tsbee"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.40"
rand = "0.9.0"
csv = "1.2"
petgraph = "0.8.1"

[dependencies.pyo3]
version = "0.23.3"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[profile.release]
debug = true

[[example]]
name = "ab_test_heap_mst"
path = "examples/ab_test_heap_mst.rs"

[[bin]]
name = "mst_benchmark"
path = ".benchmarks/mst_benchmark.rs"
