[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "tsp_solve"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "fast-tsp>=0.1.4",
    "matplotlib>=3.7.5",
    "pandas>=2.0.3",
    "scipy>=1.10.1",
    "seaborn>=0.13.2",
]
[tool.maturin]
features = ["pyo3/extension-module"]
